# ComfyUI-Vertex

./: .gitignore  README.md  __init__.py  auth.py  conftest.py  const.py  gemini3_1_flashimage_preview_howto.md  gemini_client.py  pyproject.toml
.claude/: settings.local.json
docs/: architect.md  comfyui-async-parallel-execution.md
docs/plans/: 2026-03-05-nanobanana-implementation.md  2026-03-05-nanobanana-nodes-design.md  2026-03-06-nanobanana-refactor-design.md  2026-03-06-nanobanana-refactor-implementation.md
models/: __init__.py  base.py  gemini_flash_image.py  registry.py
nodes/: __init__.py  config.py  edit.py  generate.py  model_image.py  types.py
scripts/: test_generate.py
tests/: test_auth.py  test_models_base.py
