[project]
name = "comfyui-vertex"
version = "0.1.0"
description = "ComfyUI custom nodes for VertexAI image generation"
license = "MIT"
dependencies = ["google-genai", "python-dotenv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.comfy]
PublisherId = "vertex"
DisplayName = "Vertex"
Icon = ""
